# delivery-boy

./: .env.example  .gitignore  README.md  channels.yaml.example  pyproject.toml  requirements.txt
.codex-swarm/tasks/202603251854-3YGT6P/: README.md
.codex-swarm/tasks/202603251854-9YCYQA/: README.md
.codex-swarm/tasks/202603251854-NHH4FX/: README.md
.codex-swarm/tasks/202603251854-SM51CP/: README.md
.codex-swarm/tasks/202603251854-XP6XWR/: README.md
deploy/: delivery-boy.service
src/delivery_boy/: __init__.py  app.py  config.py  logging_setup.py  models.py
src/delivery_boy/services/: __init__.py  forwarder.py  monitor.py
src/delivery_boy/storage/: __init__.py  db.py  repository.py
src/delivery_boy/telegram_web/: __init__.py  client.py  parser.py
tests/: test_monitor.py  test_parser.py  test_repository.py
